8275917: Some locks shouldn't allow_vm_block